# Purpuri

./: .gitignore  404.html  CMakeLists.txt  build.json  index.html  sitemap.xml
.github/workflows/: build.yaml  main.yml  win.yml
cp/lib/classpath/: libgconfpeer.la  libgtkpeer.la  libjavaio.la  libjavaio.so.0.0.0  libjavalang.la  libjavalang.so.0.0.0  libjavalangmanagement.la  libjavalangmanagement.so.0.0.0  libjavalangreflect.la  libjavalangreflect.so.0.0.0  libjavanet.la  libjavanet.so.0.0.0  libjavanio.la  libjavanio.so.0.0.0  libjavautil.la  libjavautil.so.0.0.0  libjawt.la
cp/share/info/: cp-hacking.info  cp-tools.info  cp-vmintegration.info
cp/share/man/man1/: gappletviewer.1  gcjh.1  gjar.1  gjarsigner.1  gjavah.1  gjdoc.1  gkeytool.1  gnative2ascii.1  gorbd.1  grmid.1  grmiregistry.1  gserialver.1  gtnameserv.1
doc/: mkdocs.yml
docs/docs/: CNAME  index.md  spec.md
headers/: Class.hpp  Common.hpp  Constants.hpp  Objects.hpp  Stack.hpp
inc/: Mapping.h  miniz.h
inc/native/: Native.hpp
inc/vm/: Class.hpp  Common.hpp  Fields.hpp  Methods.hpp  Native.hpp  Objects.hpp  Stack.hpp  ZipFile.hpp
inc/vm/debug/: Debug.hpp
inc/vm/debug/imgui/: imgui.h  imgui_impl_opengl3.h  imgui_impl_sdl.h  imgui_internal.h  imgui_memedit.h
java/lang/: String.java  System.java
java/vm/: Printer.java
lib/macos/: libSDL2-2.0.0.dylib
plugins/: c.js
search/: search_index.json
source/: Class.cpp  ClassHeap.cpp  Engine.cpp  EntryPoint.cpp  Mapping.cpp  Objects.cpp
source/class/: Constants.cpp  Fields.cpp
source/lib/: Main.cpp
source/vm/: Class.cpp  ClassHeap.cpp  Engine.cpp  EntryPoint.cpp  Instructions.cpp  Objects.cpp  ZipFile.cpp
source/vm/class/: Constants.cpp  Fields.cpp
source/vm/debug/: Debugger.cpp
source/vm/debug/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_tables.cpp  imgui_widgets.cpp
source/vm/native/: Natives.cpp
spec/: index.html
test/: Driver.java  FizzBuzz.java  IOperation.java  MemoryLeak.java  TestCaseFinalField.java  TestCaseFinalFieldInterface.java  TestCaseInnerClass.java  TestCaseInnerClassField.java  TestCaseInterface.java  TestCaseMutableField.java
test/array/: ArrayMain.java
test/flow/: For.java  If.java  While.java
test/multiple/: Core.java  Other.java
test/native/: Native.java
test/stdlib/: PrintlnTest.java  SystemTest.java
test/string/: Basic.java  Interned.java  Test.java  Test1.java
test/string/java/: String.java  System.java
